--- a/git.css
+++ b/git.css
@@ -1,3 +1,14 @@
-body{
-    background-color:aqua
+body {
+    background-color: aqua;
+}
+
+h1 {
+    color: brown;
+    text-align: center;
+}
+
+p {
+    font-family: "times new roman";
+    font-size: 20px;
+    text-align: 24px;
 }
